WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245577
[Mail Compose] Unable to "Copy Font" when the selection is collapsed
https://bugs.webkit.org/show_bug.cgi?id=245577
Summary
[Mail Compose] Unable to "Copy Font" when the selection is collapsed
Wenson Hsieh
Reported
2022-09-23 08:19:15 PDT
rdar://95564944
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-09-23 10:32:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4634
EWS
Comment 2
2022-09-23 15:53:54 PDT
Committed
254809@main
(8ab68c1708b9): <
https://commits.webkit.org/254809@main
> Reviewed commits have been landed. Closing PR #4634 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug